--- a/index.html
+++ b/index.html
@@ -36,13 +36,22 @@
 
 
 
-    <section id="Myfr">
+    <section id="Books">
+        <h1>My Favorite Books</h1>
+        <div class="line"></div>
+        <h2>My favorite book is Treasure hunters secrets of the forbidden city.</h2>
+        <br>
+        <br>
+        <iframe width="1000" height="800" src="https://en.wikipedia.org/wiki/Treasure_Hunters:_Secret_of_the_Forbidden_City" frameborder="0"></iframe>
+    </section>
+    
+     <section id="rec">
         <h1>My Favorite recipies</h1>
         <div class="line"></div>
-        <h2>My favorite recipie is this one</h2>
+        <h2>My favorite recipe is this one.</h2>
         <br>
         <br>
-        <iframe width="1000" height="https://sugarspunrun.com/the-best-pizza-dough-recipe" frameborder="0"></iframe>
+            <iframe width="1000" height="800" src="https://sugarspunrun.com/the-best-pizza-dough-recipe/" frameborder="0"></iframe>
     </section>
     
 
