--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li class="links"><a href="#bio">Home</a></li>
         <li class="links"><a href="#Books">My Favorite books</a></li>
         <li class="links"><a href="#rec">My favorite recipes</a></li> 
+        <li class="links"><a href="#ins">My inspiration</a></li>
         <li class="links">Contact</li>
     </ul>
     <section id="welcome" class="container">
@@ -61,9 +62,11 @@
         <br>
         <br>
         <span>
-            <a href="https://www.tesla.com/elon-musk"><img id="imarole" src="Elon_Musk_Royal_Society_(crop1).jpg"> </a>   
+            <a href="https://www.tesla.com/elon-musk" target="_blank"><img id="imarole" src="Elon_Musk_Royal_Society_(crop1).jpg"> </a>   
             </span>
     </section>
+    </body>
+</html>
     
     
 
